fix Query to IndustryQuery to avoid ambiguity

--- a/notebooks/01_query_by_industry.ipynb
+++ b/notebooks/01_query_by_industry.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
       "The estimated carbon footprint of a hotel night stay in Chile is 51.35 kg CO2e.\n",
       "This estimate was calculated using data from SWC MRIO Dataset, which provides information about the carbon footprint per USD (0.51) for the Accommodation industry in Chile.\n",
       "The total cost of the product was estimated by gpt-4o-2024-08-06, amounting to 100.00 USD.\n",
-      "The reasoning behind this estimate is as follows: The cost of a hotel night stay can vary significantly based on the location, star rating, and amenities offered by the hotel. In Chile, a mid-range hotel might charge between $70 to $150 per night. Luxury hotels can cost upwards of $200 per night, while budget accommodations might be available for as low as $30 to $50 per night. This estimate considers the average cost for a mid-range hotel in a popular city or tourist destination in Chile.\n"
+      "The reasoning behind this estimate is as follows: The cost of a hotel night stay can vary significantly based on the location, star rating, and amenities offered by the hotel. In Chile, a mid-range hotel might cost around $100 per night, while luxury hotels can charge upwards of $200 or more per night. Budget accommodations might be available for as low as $50 per night.\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
       "The estimated carbon footprint of a hotel night stay in United States is 70.82 kg CO2e.\n",
       "This estimate was calculated using data from SWC MRIO Dataset, which provides information about the carbon footprint per USD (0.47) for the Accommodation industry in United States.\n",
       "The total cost of the product was estimated by gpt-4o-2024-08-06, amounting to 150.00 USD.\n",
-      "The reasoning behind this estimate is as follows: The cost of a hotel night stay can vary widely based on location, hotel class, and amenities offered. In the United States, the average cost for a mid-range hotel is approximately $100 to $200 per night. Luxury hotels can cost significantly more, while budget options may be available for less.\n"
+      "The reasoning behind this estimate is as follows: The cost of a hotel night stay can vary widely depending on the location, star rating, and amenities offered by the hotel. In the United States, the average cost for a mid-range hotel is approximately $100 to $200 per night. Luxury hotels can cost significantly more, often exceeding $300 per night. Budget accommodations may be available for under $100 per night.\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
       "The estimated carbon footprint of a piscola in Chile is 3.23 kg CO2e.\n",
       "This estimate was calculated using data from SWC MRIO Dataset, which provides information about the carbon footprint per USD (0.46) for the Manufacture of alcoholic beverages  & Tobacco Products industry in Chile.\n",
       "The total cost of the product was estimated by gpt-4o-2024-08-06, amounting to 7.00 USD.\n",
-      "The reasoning behind this estimate is as follows: The cost of a piscola, a popular cocktail in Chile made with pisco and cola, can vary depending on the location and quality of ingredients. In a typical bar or restaurant in Chile, a piscola might cost around 5 to 10 USD. This estimate considers the cost of pisco, cola, and other potential ingredients like ice and lime, as well as the service and establishment overheads.\n"
+      "The reasoning behind this estimate is as follows: The cost of a piscola, which is a popular cocktail in Chile made with pisco and cola, can vary depending on the brand of pisco and cola used, as well as the location where it is purchased. On average, a bottle of pisco can cost around $10 to $20 USD, and a bottle of cola is about $1 to $2 USD. If purchased at a bar or restaurant, the price of a piscola can range from $5 to $10 USD per glass.\n"
      ]
     }
    ],
@@ -95,17 +95,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The estimated carbon footprint of a piscola in France is 4.58 kg CO2e.\n",
+      "The estimated carbon footprint of a piscola in France is 3.82 kg CO2e.\n",
       "This estimate was calculated using data from SWC MRIO Dataset, which provides information about the carbon footprint per USD (0.38) for the Manufacture of alcoholic beverages  & Tobacco Products industry in France.\n",
-      "The total cost of the product was estimated by gpt-4o-2024-08-06, amounting to 12.00 USD.\n",
-      "The reasoning behind this estimate is as follows: The cost of a Piscola, which is a cocktail made with pisco and cola, can vary depending on the brand of pisco and cola used, as well as the location where it is purchased. In France, a typical cocktail in a bar might cost between 8 to 15 USD. The cost includes the price of the ingredients, the service, and the establishment's overheads.\n"
+      "The total cost of the product was estimated by gpt-4o-2024-08-06, amounting to 10.00 USD.\n",
+      "The reasoning behind this estimate is as follows: The cost of a Piscola, which is a cocktail made with pisco and cola, primarily depends on the cost of the ingredients. Pisco is a type of brandy produced in wine-making regions of Peru and Chile, and its price can vary based on the brand and quality. Cola is relatively inexpensive. In France, the cost of imported pisco can be higher due to import taxes and shipping costs. Additionally, the cost of serving a Piscola in a bar or restaurant would include overheads such as labor, rent, and other operational expenses.\n"
      ]
     }
    ],
