carbon footprint of api call

--- a/notebooks/02_evaluation_harness.ipynb
+++ b/notebooks/02_evaluation_harness.ipynb
@@ -58,37 +58,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-08-24 07:53:51.134\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m3\u001b[0m - \u001b[1mEstimating carbon footprint for a disposable diaper in United States using gpt-4o-2024-08-06 model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:53:53.737\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m17\u001b[0m - \u001b[1mEstimating carbon footprint for a disposable diaper in United States using gpt-4o-2024-08-06_carbon model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:53:59.800\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m3\u001b[0m - \u001b[1mEstimating carbon footprint for a roll of toilet paper in United States using gpt-4o-2024-08-06 model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:54:01.906\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m17\u001b[0m - \u001b[1mEstimating carbon footprint for a roll of toilet paper in United States using gpt-4o-2024-08-06_carbon model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:54:09.063\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m3\u001b[0m - \u001b[1mEstimating carbon footprint for a pint of milk in United States using gpt-4o-2024-08-06 model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:54:11.035\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m17\u001b[0m - \u001b[1mEstimating carbon footprint for a pint of milk in United States using gpt-4o-2024-08-06_carbon model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:54:17.554\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m3\u001b[0m - \u001b[1mEstimating carbon footprint for a paperback book in United States using gpt-4o-2024-08-06 model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:54:19.666\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m17\u001b[0m - \u001b[1mEstimating carbon footprint for a paperback book in United States using gpt-4o-2024-08-06_carbon model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:54:23.099\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m3\u001b[0m - \u001b[1mEstimating carbon footprint for a night in a hotel in United States using gpt-4o-2024-08-06 model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:54:26.909\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m17\u001b[0m - \u001b[1mEstimating carbon footprint for a night in a hotel in United States using gpt-4o-2024-08-06_carbon model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:54:33.947\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m3\u001b[0m - \u001b[1mEstimating carbon footprint for a week’s food shopping in United States using gpt-4o-2024-08-06 model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:54:36.149\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m17\u001b[0m - \u001b[1mEstimating carbon footprint for a week’s food shopping in United States using gpt-4o-2024-08-06_carbon model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:54:41.974\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m3\u001b[0m - \u001b[1mEstimating carbon footprint for a disposable diaper in United States using gpt-4o-mini-2024-07-18 model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:54:49.456\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m17\u001b[0m - \u001b[1mEstimating carbon footprint for a disposable diaper in United States using gpt-4o-mini-2024-07-18_carbon model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:54:53.888\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m3\u001b[0m - \u001b[1mEstimating carbon footprint for a roll of toilet paper in United States using gpt-4o-mini-2024-07-18 model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:54:55.530\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m17\u001b[0m - \u001b[1mEstimating carbon footprint for a roll of toilet paper in United States using gpt-4o-mini-2024-07-18_carbon model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:55:00.028\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m3\u001b[0m - \u001b[1mEstimating carbon footprint for a pint of milk in United States using gpt-4o-mini-2024-07-18 model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:55:01.584\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m17\u001b[0m - \u001b[1mEstimating carbon footprint for a pint of milk in United States using gpt-4o-mini-2024-07-18_carbon model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:55:05.932\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m3\u001b[0m - \u001b[1mEstimating carbon footprint for a paperback book in United States using gpt-4o-mini-2024-07-18 model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:55:07.426\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m17\u001b[0m - \u001b[1mEstimating carbon footprint for a paperback book in United States using gpt-4o-mini-2024-07-18_carbon model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:55:11.913\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m3\u001b[0m - \u001b[1mEstimating carbon footprint for a night in a hotel in United States using gpt-4o-mini-2024-07-18 model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:55:20.352\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m17\u001b[0m - \u001b[1mEstimating carbon footprint for a night in a hotel in United States using gpt-4o-mini-2024-07-18_carbon model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:55:24.747\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m3\u001b[0m - \u001b[1mEstimating carbon footprint for a week’s food shopping in United States using gpt-4o-mini-2024-07-18 model\u001b[0m\n",
-      "\u001b[32m2024-08-24 07:55:26.888\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m17\u001b[0m - \u001b[1mEstimating carbon footprint for a week’s food shopping in United States using gpt-4o-mini-2024-07-18_carbon model\u001b[0m\n"
+      "\u001b[32m2024-08-24 10:26:32.598\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m3\u001b[0m - \u001b[1mEstimating carbon footprint for a disposable diaper in United States using gpt-4o-2024-08-06 model\u001b[0m\n",
+      "\u001b[32m2024-08-24 10:26:36.313\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36mcarbon.llm\u001b[0m:\u001b[36mestimate_raw\u001b[0m:\u001b[36m72\u001b[0m - \u001b[31m\u001b[1mAn error occurred while querying the OpenAI API: 'dict' object is not callable\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'carbon_footprint'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[40], line 13\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(cost)\n\u001b[0;32m      8\u001b[0m end_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m      9\u001b[0m results\u001b[38;5;241m.\u001b[39mappend({\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel\u001b[39m\u001b[38;5;124m\"\u001b[39m: model,\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mitem\u001b[39m\u001b[38;5;124m\"\u001b[39m: item,\n\u001b[0;32m     12\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcountry\u001b[39m\u001b[38;5;124m\"\u001b[39m: country,\n\u001b[1;32m---> 13\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpredicted\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[43mresult_raw\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcarbon_footprint\u001b[49m,\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mexpected\u001b[39m\u001b[38;5;124m\"\u001b[39m: expected,\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtime\u001b[39m\u001b[38;5;124m\"\u001b[39m: end_time \u001b[38;5;241m-\u001b[39m start_time,\n\u001b[0;32m     16\u001b[0m })\n\u001b[0;32m     18\u001b[0m logger\u001b[38;5;241m.\u001b[39minfo(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEstimating carbon footprint for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mitem\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcountry\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m using \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_carbon model\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     19\u001b[0m \u001b[38;5;66;03m# using our carbon footprint estimate\u001b[39;00m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'carbon_footprint'"
      ]
     }
    ],
@@ -98,7 +94,7 @@
     "    logger.info(f\"Estimating carbon footprint for {item} in {country} using {model} model\")\n",
     "    # using the raw estimate\n",
     "    start_time = time.time()\n",
-    "    result_raw = estimate_raw(item, country, model=model)\n",
+    "    result_raw, cost = estimate_raw(item, country, model=model)\n",
     "    end_time = time.time()\n",
     "    results.append({\n",
     "        \"model\": model,\n",
@@ -112,7 +108,7 @@
     "    logger.info(f\"Estimating carbon footprint for {item} in {country} using {model}_carbon model\")\n",
     "    # using our carbon footprint estimate\n",
     "    start_time = time.time()\n",
-    "    result = estimate_carbon_footprint(item, country, model=model)\n",
+    "    result, cost = estimate_carbon_footprint(item, country, model=model)\n",
     "    end_time = time.time()\n",
     "    results.append({\n",
     "        \"model\": f\"{model}_carbonada\",\n",
