adding test data

--- a/notebooks/02_evaluation_harness.ipynb
+++ b/notebooks/02_evaluation_harness.ipynb
@@ -53,6 +53,45 @@
     "    (\"a paperback book\", \"United States\", 1),\n",
     "    (\"a night in a hotel\", \"United States\", 75),\n",
     "    (\"a week’s food shopping\", \"United States\", 81),    \n",
+    "    (\"Manzanas\", 0.315567090225564),\n",
+    "    (\"Peras\",0.151477857142857),\n",
+    "    (\"Platanos\", 0.199110481203008),\n",
+    "    (\"Carne de res\",15.5),\n",
+    "    (\"Leche de almendra\",0.8)#https://www.foodunfolded.com/es/articulo/leche-de-origen-vegetal-la-huella-ecologica,\n",
+    "    (\"Café molido\",3.27814541353384),\n",
+    "    (\"Aguacates\",0.665384045112782),\n",
+    "    (\"Queso cheddar\",0.74),\n",
+    "    (\"Bolsa de Papel\",0.064),\n",
+    "    (\"Teléfono inteligente\",63),\n",
+    "    (\"Laptop\",422.5),\n",
+    "    (\"Camiseta de algodón\", 15),\n",
+    "    (\"Jeans de mezclilla\",13.5733333333333),\n",
+    "    (\"Paneles solares\",0.0249677556390977),\n",
+    "    (\"Bicicleta\",0),\n",
+    "    (\"Automóvil eléctrico\",21000),\n",
+    "    (\"Botella de agua reutilizable\",0.1405),\n",
+    "    (\"Batería AA Alcalina\",0.0702062135338346),\n",
+    "    (\"Cerveza\",0.707145556),\n",
+    "    (\"Vino tinto\", 2.020833042),\n",
+    "    (\"Chocolate caliente\", 2.519647737),\n",
+    "    (\"Pan integral\",0.826108796992481),\n",
+    "    (\"Yogur griego\", 2.1089522556391),\n",
+    "    (\"Huevo\", 0.183),\n",
+    "    (\"Mantequilla de maní\", 0.183),\n",
+    "    (\"Salmón ahumado\",5.93363436090226),\n",
+    "    (\"Tofu\",5.93363436090226),\n",
+    "    (\"Garbanzos\", 0.4),\n",
+    "    (\"Una noche de hotel\", 27.6),\n",
+    "    (\"Un viaje en transporte público\", 1.03),\n",
+    "    (\"Una lavada de ropa en lavadora  \",3.3),\n",
+    "    (\"Una comida en un restaurante\",8)#https://www.gotenzo.com/resources/insight/the-carbon-neutral-restaurant-a-pipedream-or-an-inevitability/,\n",
+    "    (\"Un viaje en avión de 1 hora\",1.46)#https://www.tandfonline.com/doi/pdf/10.1080/17583004.2017.1412232?needAccess=true,\n",
+    "    (\"Un trayecto en taxi de 10 km\",1),\n",
+    "    (\"Una videollamada de Zoom 1 hora\",0.02),\n",
+    "    (\"El uso de aire acondicionado por 8 horas\",3653),\n",
+    "    (\"Un corte de cabello\",3.1),#https://britishbeautycouncil.com/net-zero-now/,\n",
+    "    (\"Un viaje en tren de 10 km\", 0.37),\n",
+    "    (\"Una caminata\", 0)\n",
     "]"
    ]
   },
