--- a/notebooks/05_query_embedding_llm.ipynb
+++ b/notebooks/05_query_embedding_llm.ipynb
@@ -126,6 +126,36 @@
     "  \n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ejemplos_relation = [\n",
+    "    (\"Un lavado de autos\", \"Lavadora\", \"no\"),\n",
+    "    (\"Una reparación de electrodomésticos\", \"Lavavajillas\", \"no\"),\n",
+    "    (\"Un viaje en avión de 1 hora\", \"Un viaje en tren de 30 minutos\", \"no\"),\n",
+    "    (\"Una sesión de spa\", \"Una comida en un restaurante\", \"no\"),\n",
+    "    (\"Cerveza artesanal\", \"Vino tinto\", \"no.\"),\n",
+    "    (\"Una comida en un restaurante\", \"Un servicio de catering para 20 personas\", \"yes.\"),\n",
+    "    (\"Una lavada de ropa en lavadora\", \"Una limpieza dental\", \"no\"),\n",
+    "    (\"Un corte de cabello\", \"Una sesión de spa\", \"yes\"),\n",
+    "    (\"Un viaje en transporte público\", \"Un trayecto en taxi de 10 km\", \"yes\"),\n",
+    "    (\"Un servicio de streaming por 1 hora\", \"Una carga de teléfono inteligente\", \"no\")\n",
+    "]\n",
+    "\n",
+    "\n",
+    "for query, response, expected_result in ejemplos_relation:\n",
+    "    result = query_response_relation(query, response)\n",
+    "    print(f\"Query: {query}\")\n",
+    "    print(f\"Response: {response}\")\n",
+    "    print(f\"Expected Result: {expected_result}\")\n",
+    "    print(f\"Actual Result: {result}\")\n",
+    "    print()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
